<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_ip"
        android:id="@+id/title_ip"
        android:textSize="@dimen/item_title_size"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="000.000.0.0"
        android:textSize="@dimen/item_content_size"
        android:id="@+id/tvIp"
        android:layout_toStartOf="@+id/swListen"
        android:layout_alignBottom="@+id/title_ip"
        android:layout_toEndOf="@+id/title_ip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_port"
        android:id="@+id/title_port"
        android:textSize="@dimen/item_title_size"
        android:layout_below="@+id/title_ip"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/etPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/title_port"
        android:layout_toRightOf="@id/title_port"
        android:layout_toEndOf="@+id/title_port"
        android:inputType="number"
        android:hint="@string/defPort"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listen"
        android:id="@+id/swListen"
        android:layout_alignTop="@+id/title_ip"

        android:layout_alignParentEnd="true"
        android:checked="false" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hex_send"
        android:id="@+id/cbHexS"
        android:layout_below="@+id/title_port"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSendContent"
        android:layout_below="@+id/cbHexS"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btSend" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/btSend"
        android:layout_alignBottom="@+id/etSendContent"
        android:layout_toStartOf="@+id/btBroadcast"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broadcast"
        android:id="@+id/btBroadcast"
        android:layout_alignBottom="@+id/etSendContent"
        android:layout_alignParentEnd="true" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hex_show"
        android:id="@+id/cbHexR"
        android:layout_below="@+id/etSendContent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cyclic_send"
        android:id="@+id/cbCyclicSend"
        android:layout_below="@+id/cbHexR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCyclicTime"
        android:layout_alignBaseline="@+id/cbCyclicSend"
        android:layout_toRightOf="@+id/cbCyclicSend"
        android:layout_toEndOf="@+id/cbCyclicSend"
        android:layout_toLeftOf="@+id/btClear"
        android:layout_toStartOf="@+id/btClear"
        android:hint="@string/defTime"
        android:inputType="number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rec_data"
        android:id="@+id/title_data"
        android:layout_below="@+id/btClear"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/btClear"
        android:layout_alignBottom="@+id/cbCyclicSend"
        android:layout_alignParentEnd="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvGet"
        android:layout_below="@+id/title_data"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spClientsIp"
        android:layout_alignBaseline="@+id/cbHexS"
        android:layout_alignBottom="@+id/cbHexS"
        android:layout_alignEnd="@+id/btBroadcast"
        android:layout_toEndOf="@+id/etPort"
        android:layout_above="@+id/btSend"
        android:visibility="visible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="客户端:"
        android:id="@+id/textView"
        android:layout_alignBaseline="@+id/cbHexS"
        android:layout_alignBottom="@+id/cbHexS"
        android:layout_toStartOf="@id/spClientsIp"
        />

</RelativeLayout>
